Fixed #324 Fixed Google PageSpeed performance issue with font visibility - Add font-style [swap](https://developer.chrome.com/en/docs/lighthouse/performance/font-display/) to local fonts CSS, this will use ready fonts while font-face is loading. - Add &display=swap to Google fonts CSS URL, this will display text with ready fonts, while waiting for Google Fonts to load.

--- a/fonts/ChunkFive-fontfacekit/stylesheet.css
+++ b/fonts/ChunkFive-fontfacekit/stylesheet.css
@@ -6,4 +6,5 @@
   src: url('Chunkfive-webfont.eot?#iefix') format('embedded-opentype'), url('Chunkfive-webfont.woff') format('woff'), url('Chunkfive-webfont.ttf') format('truetype'), url('Chunkfive-webfont.svg#ChunkFiveRegular') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
